objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CVAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <formula>SUBSTITUTE(IF( 
  AND (
     ISPICKVAL( Family , &apos;PV Module&apos; ),
     NOT( ISBLANK( Quarter__c ) )
  ),
  RIGHT( Name , LEN(Name) - 5), &apos;&apos;  
), &apos;-US&apos;, &apos;&apos;)</formula>
        <label>Module Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Wattage__c</fullName>
        <formula>IF( 
   AND (
      NOT( ISBLANK(  Module_Name__c ) ),
      FIND(&apos;-COM&apos;, Module_Name__c) &gt; -1
   ),
   RIGHT ( 
      LEFT ( 
         Module_Name__c, 
         FIND(&apos;-COM&apos;, Module_Name__c) - 1
      ), 3
   ), &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Wattage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_M__c</fullName>
        <label>O&amp;M?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Categories__c</fullName>
        <label>Product Categories</label>
        <picklist>
            <picklistValues>
                <fullName>ACPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Part for System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - SPWR - 128 cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - SPWR - 36 cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - SPWR - 72 cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - SPWR - 96 cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - SPWR - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel - TENESOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racking System</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family_Text__c</fullName>
        <formula>Text(Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Categories__c</fullName>
        <label>Product Sub-Categories</label>
        <picklist>
            <picklistValues>
                <fullName>A300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easyroof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen1 Inter-Row Extension Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen1 Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen2 Inter-Row Extension Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen2 Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounding lugs/clips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeruns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisimount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K2 Solar Fastener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KACO-EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met. Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Balance of System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satcon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Price</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Commercial:
Field added to extract the quarter of the product as part of the Helix PPA project
PO: Miltos Vratimos
Projected Release: WW21 - 2017</description>
        <formula>IF (
   LEFT(Name , 1) = &apos;Q&apos;,
   UPPER( LEFT( Name , 2) ),
   &apos;&apos;
)</formula>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wattage_Out__c</fullName>
        <label>Wattage Out</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Commercial: 
Field added to retrieve the year from the product, used to base product cost quarterly for FinEng 
PO: Miltiadis Vratimos 
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633 
Target Release: WW21 - 2017</description>
        <formula>IF( 
   NOT( ISBLANK( Quarter__c ) ),
   &apos;20&apos; + RIGHT( LEFT( Name , 4) , 2 ),
   &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
</CustomObject>